[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "figexport"
version = "0.2.5"
description = """
    Automatic export of figures of heterogeneous formats to PDF/SVG/PNG/JPG files.
    """
readme = "README.md"
authors = [
    {name = "Houssem Guissouma", email = "houssem.guissouma@gmx.de"},
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    # Processing SVG files
    "cairosvg",
    # HTTP requests for downloading files from the web
    "requests"
]

[project.urls]
Homepage = "https://github.com/HouGui/figexport"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    # Packaging and distribution
    "build",
    "twine"
]

[project.scripts]
figexport = "figexport.main:main"
